GearsetPOC/force-app/main/default/objects/Audit__c/Audit__c.object-meta.xml
<CustomObject>
    <description>To store audit trials of vendor requests</description>
    <label>Vendor_Audit</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AuditId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor_Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>