GearsetPOC/force-app/main/default/objects/Audit__c/fields/Actioned_By__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By__c</fullName>
    <description>Actioned_By</description>
    <inlineHelpText>Actioned_By</inlineHelpText>
    <label>Actioned_By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>