GearsetPOC/force-app/main/default/objects/Audit__c/fields/Actioned_By_User__c.field-meta.xml
<CustomField>
    <fullName>Actioned_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User ID of Actioned by user</description>
    <label>Actioned By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audits_actioned_by</relationshipName>
    <type>Lookup</type>
</CustomField>