GearsetPOC/force-app/main/default/objects/Audit__c/fields/Actioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Date__c</fullName>
    <description>Actioned_Date</description>
    <inlineHelpText>Actioned_Date</inlineHelpText>
    <label>Actioned_Date</label>
    <type>DateTime</type>
</CustomField>