GearsetPOC/force-app/main/default/objects/Audit__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>Assigned To</description>
    <inlineHelpText>Assigned To</inlineHelpText>
    <label>Assigned_To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>