GearsetPOC/force-app/main/default/objects/Audit__c/fields/Long_Comment__c.field-meta.xml
<CustomField>
    <fullName>Long_Comment__c</fullName>
    <label>Long_Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>