GearsetPOC/force-app/main/default/objects/Audit__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Requst Id</description>
    <inlineHelpText>Requst Id</inlineHelpText>
    <label>RequestId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>